--- a/student.html
+++ b/student.html
@@ -1,1 +1,8 @@
-<h1>Hello world from 2430313</h1>
+<!DOCTYPE html>
+</html>
+  <head>
+  </head>
+  <body>
+      <h1>Hello world from Mpho Nkutha 2430313</h1>
+  </body>
+  </html>
