--- a/student.html
+++ b/student.html
@@ -3,6 +3,6 @@
   <head>
   </head>
   <body>
-      <h1>Hello world from Mpho Nkutha 2430313</h1>
+      <h1>Hello world from Mpho Nkutha (2430313)</h1>
   </body>
   </html>
